Did a last check and changed some div into span

--- a/coding.html
+++ b/coding.html
@@ -129,8 +129,8 @@
         160004 |    1201 |         7 | Ansi Agolli             | DF           | 1982-10-11 |  33 | Qarabag
         160012 |    1201 |         8 | Migjen Basha            | MF           | 1987-01-05 |  29 | Como
         160017 |    1201 |         9 | Ledian Memushaj         | MF           | 1986-12-17 |  29 | Pescara
-        <div id='players-readMore' class="readMore">Read More</div>
-        <div id="player-table-readMore" class="isMore">
+        <span id='players-readMore' class="readMore">Read More</span>
+        <span id="player-table-readMore" class="isMore">
         160023 |    1201 |        10 | Armando Sadiku          | FD           | 1991-05-27 |  25 | Vaduz
         160022 |    1201 |        11 | Shkelzen Gashi          | FD           | 1988-07-15 |  27 | Colorado
         160003 |    1201 |        12 | Orges Shehi             | GK           | 1977-09-25 |  38 | Skenderbeu
@@ -155,10 +155,10 @@
         160034 |    1202 |         8 | David Alaba             | MF           | 1992-06-24 |  23 | Bayern
         160046 |    1202 |         9 | Rubin Okotie            | FD           | 1987-06-06 |  29 | 1860 Munchen
         160040 |    1202 |        10 | Zlatko Junuzovic        | MF           | 1987-09-26 |  28 | Bremen
-        </div>
-        <div id="playerLess" class="showLess">Show Less</div>
-        <div id='players-readMore-one' class="readMore extraRead">Read More</div>
-        <div id="player-table-readMore-one" class="isMore">
+        </span>
+        <span id="playerLess" class="showLess">Show Less</span>
+        <span id='players-readMore-one' class="readMore extraRead">Read More</span>
+        <span id="player-table-readMore-one" class="isMore">
         160037 |    1202 |        11 | Martin Harnik           | MF           | 1987-06-10 |  29 | Stuttgart
         160025 |    1202 |        12 | Heinz Lindner           | GK           | 1990-07-17 |  25 | Frankfurt
         160032 |    1202 |        13 | Markus Suttner          | DF           | 1987-04-16 |  29 | Ingolstadt
@@ -183,10 +183,10 @@
         160067 |    1203 |         9 | Romelu Lukaku           | FD           | 1993-05-13 |  23 | Everton
         160062 |    1203 |        10 | Eden Hazard             | MF           | 1991-01-07 |  25 | Chelsea
         160058 |    1203 |        11 | Yannick Carrasco        | MF           | 1993-09-04 |  22 | Atletico
-        </div>
-        <div id="playerLess-One" class="showLess">Show Less</div>
-        <div id='players-readMore-Full' class="readMore extraRead">Read Full</div>
-        <div id="player-table-readMore-Full" class="isMore">
+        </span>
+        <span id="playerLess-One" class="showLess">Show Less</span>
+        <span id='players-readMore-Full' class="readMore extraRead">Read Full</span>
+        <span id="player-table-readMore-Full" class="isMore">
         160049 |    1203 |        12 | Simon Mignolet          | GK           | 1988-08-06 |  27 | Liverpool
         160048 |    1203 |        13 | Jean-Francois Gillet    | GK           | 1979-05-31 |  37 | Mechelen
         160068 |    1203 |        14 | Dries Mertens           | FD           | 1987-05-06 |  29 | Napoli
@@ -682,8 +682,8 @@
         160532 |    1224 |        21 | Danny Ward              | GK           | 1993-06-22 |  22 | Liverpool
         160545 |    1224 |        22 | David Vaughan           | MF           | 1983-02-18 |  33 | Nottm Forest
         160548 |    1224 |        23 | Simon Church            | FD           | 1988-12-10 |  27 | MK Dons
-        </div>
-        <div id="playerLess-Full" class="showLess">Show Less</div>
+        </span>
+        <span id="playerLess-Full" class="showLess">Show Less</span>
                         </code>
 
                     </div>
@@ -704,8 +704,8 @@
             7  |	37 |	1221 |	  160470 |	Y     |	7
             8  |	37 |	1213 |	  160287 |	Y     |	8
             9  |	37 |	1221 |	  160469 |	Y     |	9
-            <div id='penalty-readMore' class="readMore">Read More</div>
-        <div id="penalty-table-readMore" class="isMore">
+            <span id='penalty-readMore' class="readMore">Read More</span>
+        <span id="penalty-table-readMore" class="isMore">
             10 |	37 |	1213 |	  160291 |	Y     |	10
             11 |	45 |	1214 |	  160322 |	Y     |	1
             12 |	45 |	1213 |	  160297 |	Y     |	2
@@ -734,8 +734,8 @@
             35 |	47 |	1208 |	  160165 |	Y     |	16
             36 |	47 |	1211 |	  160237 |	N     |	17
             37 |	47 |	1208 |	  160166 |	Y     |	18
-        </div>
-        <div id="penaltyLess" class="showLess">Show Less</div>
+        </span>
+        <span id="penaltyLess" class="showLess">Show Less</span>
 
                         </code>
 
@@ -757,8 +757,8 @@
           1207 |      FRA     | France
           1208 |      GER     | Germany
           1209 |      HUN     | Hungary
-          <div id='country-readMore' class="readMore">Read More</div>
-        <div id="country-table-readMore" class="isMore">
+          <span id='country-readMore' class="readMore">Read More</span>
+        <span id="country-table-readMore" class="isMore">
           1210 |      ISL     | Iceland
           1211 |      ITA     | Italy
           1212 |      NIR     | Northern Ireland
@@ -779,8 +779,8 @@
           1227 |      SRB     | Serbia
           1228 |      SCO     | Scotland
           1229 |      NOR     | Norway
-          </div>
-          <div id="countryLess" class="showLess">Show Less</div>
+          </span>
+          <span id="countryLess" class="showLess">Show Less</span>
                         </code>
 
                     </div>
