Styling changes to make things consistant

--- a/coding.html
+++ b/coding.html
@@ -26,14 +26,14 @@
     </div>
 
     <div id="big-nav" class="big-nav">
-        <div class="block-letter"><a class="menu-link" href="index.php">P</a></div>
+        <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/">P</a></div>
         <ul class="big-nav-list">
-            <li><strong><a class="menu-link" href="index.php#projects">My Portfolio</a></strong></li>
-            <li><strong><a class="menu-link" href="about.html">About Me</a></strong></li>
-            <li><strong><a class="currentPage menu-link" href="#">Coding Examples</a></strong></li>
-            <li><strong><a class="menu-link" href="SCSscheme.html">SCS Scheme</a></strong></li>
+            <li><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/#projects">My Portfolio</a></li>
+            <li><a class="menu-link" href="about.html">About Me</a></li>
+            <li><a class="currentPage menu-link" href="#">Coding Examples</a></li>
+            <li><a class="menu-link" href="SCSscheme.html">SCS Scheme</a></li>
         </ul>
-        <a href="index.php#contact-area" class="contact-me-link menu-link">Contact Me</a>
+        <a href="https://peter-jardine.netmatters-scs.co.uk/#contact-area" class="contact-me-link menu-link">Contact Me</a>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank" class="social-media-links menu-link"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/Pjard94" target="_blank" class="social-media-links menu-link"><i class="fab fa-github"></i></a>
@@ -50,7 +50,7 @@
                 <div class="coding-example-title">Randomised comparing functions</div>
 
                 <div>
-                    <p>
+                    <p class="SQL-explanation">
                         This shows a group of functions that takes a randomised selection from the variable at the top of the code window, then in the following two functions compare the results to the results from the previous functions.
                     </p>
 
