--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -26,12 +26,12 @@
     </div>
 
     <div id="big-nav" class="big-nav">
-        <div class="block-letter"><a class="menu-link" href="index.php">P</a></div>
+        <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/">P</a></div>
         <ul class="big-nav-list">
-            <li><strong><a class="menu-link" href="index.php#projects">My Portfolio</a></strong></li>
-            <li><strong><a class="menu-link" href="about.html">About Me</a></strong></li>
-            <li><strong><a class="menu-link" href="coding.html">Coding Examples</a></strong></li>
-            <li><strong><a class="currentPage menu-link" href="#">SCS Scheme</a></strong></li>
+            <li><a class="menu-link" href="index.php#projects">My Portfolio</a></li>
+            <li><a class="menu-link" href="about.html">About Me</a></li>
+            <li><a class="menu-link" href="coding.html">Coding Examples</a></li>
+            <li><a class="currentPage menu-link" href="#">SCS Scheme</a></li>
         </ul>
         <a href="index.php#contact-area" class="contact-me-link menu-link">Contact Me</a>
         <div class="social-media">
