--- a/about.html
+++ b/about.html
@@ -27,14 +27,14 @@
     </div>
 
     <div id="big-nav" class="big-nav">
-        <div class="block-letter"><a class="menu-link" href="index.php">P</a></div>
+        <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/.php">P</a></div>
         <ul class="big-nav-list">
-            <li><strong><a class="menu-link" href="index.php#projects">My Portfolio</a></strong></li>
-            <li><strong><a class="currentPage menu-link" href="#">About Me</a></strong></li>
-            <li><strong><a class="menu-link" href="coding.html">Coding Examples</a></strong></li>
-            <li><strong><a class="menu-link" href="SCSscheme.html">SCS Scheme</a></strong></li>
+            <li><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/.php#projects">My Portfolio</a></li>
+            <li><a class="currentPage menu-link" href="#">About Me</a></li>
+            <li><a class="menu-link" href="coding.html">Coding Examples</a></li>
+            <li><a class="menu-link" href="SCSscheme.html">SCS Scheme</a></li>
         </ul>
-        <a href="index.php#contact-area" class="contact-me-link menu-link">Contact Me</a>
+        <a href="https://peter-jardine.netmatters-scs.co.uk/#contact-area" class="contact-me-link menu-link">Contact Me</a>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank" class="social-media-links menu-link"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/Pjard94" target="_blank" class="social-media-links menu-link"><i class="fab fa-github"></i></a>
