Fixed some links i noticed were broken

--- a/about.html
+++ b/about.html
@@ -27,9 +27,9 @@
     </div>
 
     <div id="big-nav" class="big-nav">
-        <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/.php">P</a></div>
+        <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/">P</a></div>
         <ul class="big-nav-list">
-            <li><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/.php#projects">My Portfolio</a></li>
+            <li><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/#projects">My Portfolio</a></li>
             <li><a class="currentPage menu-link" href="#">About Me</a></li>
             <li><a class="menu-link" href="coding.html">Coding Examples</a></li>
             <li><a class="menu-link" href="SCSscheme.html">SCS Scheme</a></li>
