--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -28,12 +28,12 @@
     <div id="big-nav" class="big-nav">
         <div class="block-letter"><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/">P</a></div>
         <ul class="big-nav-list">
-            <li><a class="menu-link" href="index.php#projects">My Portfolio</a></li>
+            <li><a class="menu-link" href="https://peter-jardine.netmatters-scs.co.uk/#projects">My Portfolio</a></li>
             <li><a class="menu-link" href="about.html">About Me</a></li>
             <li><a class="menu-link" href="coding.html">Coding Examples</a></li>
             <li><a class="currentPage menu-link" href="#">SCS Scheme</a></li>
         </ul>
-        <a href="index.php#contact-area" class="contact-me-link menu-link">Contact Me</a>
+        <a href="https://peter-jardine.netmatters-scs.co.uk/#contact-area" class="contact-me-link menu-link">Contact Me</a>
         <div class="social-media">
             <a href="https://www.linkedin.com/in/peter-jardine-1b2045215/" target="_blank" class="social-media-links menu-link"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://github.com/Pjard94" target="_blank" class="social-media-links menu-link"><i class="fab fa-github"></i></a>
