--- a/about.html
+++ b/about.html
@@ -43,41 +43,36 @@
 
     <div id="menu-showing">
 
-        <div id="about-page">
+        <div id="content-container">
 
-            <div id="about-container">
+            <h1 id="internal-title">About Me</h1>
 
-                <div id="about-title">
-                    <h1>About Me</h1>
-                </div>
+            <div class="content-card" id="about-me-paragraph">
 
-                <div id="about-me-paragraph">
+                <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
 
-                    <h3 class="about-first-line">My name is Peter Jardine, I am a Manchester based developer in training.</h3>
+                <!-- the link in the about area goes to the scs scheme page as it's mentioned in the about section -->
+                <p class="about-paragraphs">
+                    I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
+                </p>
 
-                    <!-- the link in the about area goes to the scs scheme page as it's mentioned in the about section -->
-                    <p class="about-paragraphs">
-                        I am currently learning to code through the <a href="SCSscheme.html" target="blank" id="about-scheme-link">Scion scheme</a> with Netmatters.
-                    </p>
+                <p class="about-paragraphs">
+                    I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
+                </p>
 
-                    <p class="about-paragraphs">
-                        I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
-                    </p>
-
-                    <p class="about-paragraphs">
-                        When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
-                    </p>
-                </div>
-
+                <p class="about-paragraphs">
+                    When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
+                </p>
             </div>
-
 
         </div>
 
+
     </div>
 
-    <!-- Script for running the menu interaction -->
-    <script src="js/nav-menu.js"></script>
+</div>
 
+<!-- Script for running the menu interaction -->
+<script src="js/nav-menu.js"></script>
 </body>
 </html>
