Updated the about and SCS sections

--- a/about.html
+++ b/about.html
@@ -57,11 +57,11 @@
                 </p>
 
                 <p class="about-paragraphs">
-                    I have been learning front end development, with HTML and CSS courses. Recently I have started learning about the back end of web development with Javascript and Jquery.
+                    I am a confident programmer in HTML, CSS, SCSS, Javascript and Jquery, furthermore I have some skill in PHP, SQL and C#, including Razor. I have learned C# in the MVC design pattern.
                 </p>
 
                 <p class="about-paragraphs">
-                    When learning new things, I have then attempted to apply what I have learned to a personal project. A strat roulette for a game, which with the press of a button the players would recieve challenges to make the game harder or more fun. 
+                    When learning new things, I have then attempted to apply what I have learned to a personal projects. For example a strat roulette for a game, which with the press of a button the users would recieve challenges to make the game harder or more fun.
                 </p>
             </div>
 
