added a new class to avoid index page messing up

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div id="menu-showing">
+    <div id="menu-showing" class="internalPage">
 
         <div id="content-container">
 
