--- a/coding.html
+++ b/coding.html
@@ -41,7 +41,7 @@
         </div>
     </div>
 
-    <div id="menu-showing">
+    <div id="menu-showing" class="internalPage">
 
         <div id="content-container">
 
