Scion feedback fixes.

--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -74,9 +74,9 @@
             </div>
             
         </div>
-
+        <div id="menu-overlay"></div>
     </div>
-
+    
     <!-- Script for running the menu interaction -->
     <script src="js/nav-menu.js"></script>
 
