--- a/about.html
+++ b/about.html
@@ -61,17 +61,15 @@
                 </p>
 
                 <p class="about-paragraphs">
-                    When learning new things, I have then attempted to apply what I have learned to a personal projects. For example a strat roulette for a game, which with the press of a button the users would recieve challenges to make the game harder or more fun.
+                    When learning new things, I have then attempted to apply what I have learned to personal projects. For example a strat roulette for a game, which with the press of a button the users would recieve challenges to make the game harder or more fun.
                 </p>
             </div>
 
         </div>
-
-
+        <div id="menu-overlay"></div>
     </div>
 
-</div>
-
+    
 <!-- Script for running the menu interaction -->
 <script src="js/nav-menu.js"></script>
 </body>
