--- a/coding.html
+++ b/coding.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Site identifiers -->
-    <title> Peter Jardine's Protfolio</title>
+    <title>Coding Example</title>
     <link rel="icon" href="assets/favicon.png">
     <!-- allows the jQuery stuff to run -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -61,7 +61,7 @@
                     <!-- this window is to be used to show code, each of the spans are used to hold different elements -->
                     <pre class="language-js">
 
-                        <code class="language-js">
+                        <code id="apex" class="language-js">
 
                             <span class="token-action">const</span><span class="token-character"> character</span><span> = </span><span class="token-variable-container">[</span><span class="token-string">"Loba"</span><span>, </span><span class="token-string">"Fuse"</span><span>, </span><span class="token-string">"Horizon"</span><span>, </span><span class="token-string">"Octane"</span><span>, </span><span class="token-string">"Wraith"</span><span>, </span><span class="token-string">"Wattson"</span><span>, </span>
                                                     <span class="token-string">"Revenant"</span><span>, </span><span class="token-string">"Rampart"</span><span>, </span><span class="token-string">"Pathfinder"</span><span>, </span><span class="token-string">"Mirage"</span><span>, </span><span class="token-string">"Lifeline"</span><span>, </span><span class="token-string">"Gibraltar"</span><span>, </span>
@@ -847,10 +847,10 @@
 
         </div>
 
-        </div>
+        <div id="menu-overlay"></div>
 
     </div>
-
+  
     <!-- Script for running the menu interaction -->
     <script src="js/nav-menu.js"></script>
     <script src="js/readMore.js"></script>
