last of the scion fixes

--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
     <div id="menu-showing" class="internalPage">
 
-        <div id="content-container">
+        <div id="about-fix" class="content-container">
 
             <h1 id="internal-title">About Me</h1>
 
