--- a/coding.html
+++ b/coding.html
@@ -43,7 +43,7 @@
 
     <div id="menu-showing" class="internalPage">
 
-        <div id="content-container">
+        <div class="content-container">
 
             <h1 id="internal-title">Coding Examples</h1>
 
