--- a/SCSscheme.html
+++ b/SCSscheme.html
@@ -42,7 +42,7 @@
 
     <div id="menu-showing" class="internalPage">
 
-        <div id="content-container">
+        <div class="content-container">
 
             <h1 id="internal-title">SCS Scheme</h1>
 
